# static_comfyui

./: .gitignore  AGENTS.md  BUILD.md  IPAdapter.md  README.md  api.md  build.sh  build_all.sh  claude.md  comfycli_remote.sh  comfyui_analysis.md  concat_src.py  convert_clip_to_jit3.py  convert_clip_to_jit_script.py  convert_vae_to_jit.py  cpp_runtime  deliver.sh  deploy.md  deploy.sh  design.md  dump_unet_layers.py  export_jit_v10.py  export_jit_v11.py  export_sd_weights.py  gen_unet.py  generate_sd_code.py  img.sh  merge_weights.py  remote_server.md  run.sh  sdxl_pipeline.py  stable-diffusion.cpp_analysis.md  task.md  test_baseline.json  test_hiresfix.json  test_ipadapter.json  test_ipadapter_loaders.json  test_lora.json  test_minimal.json  test_minimal2.json  (+5 more)
build_out/: input.ss  merged.ss
build_tmp/: array_ops.ss  main.ss  nn_ops.ss  sd_full.ss  sd_runtime.ss  sd_tests.ss  tcw.ss
comfycli/: _bundle.static.py  cli_args.static.py  clip_model.static.py  comfy_types.static.py  controlnet.static.py  execution.static.py  folder_paths.static.py  latent_formats.static.py  lora.static.py  main.static.py  model_base.static.py  model_detection.static.py  model_management.static.py  model_sampling.static.py  nodes.static.py  sample.static.py  sd.static.py  sd_backend.static.py  supported_models.static.py  supported_models_base.static.py  test.static.py
comfycli/k_diffusion/: sampling.static.py
compiler/: prelude.scm  stdlib.scm  translate.py
cpp/: build_clip_helper.sh  build_torch_std_helper.sh  check_vae.cpp  clip_helper.cpp  comfycli_native.cpp  engine.cpp  engine.h  libtorch_std_helper.cpp  libtorch_std_helper.h  native_sdxl.cpp  sd_helper.cpp  sdxl_full.cpp  sdxl_ggml.cpp  sdxl_pipeline.cpp  sdxl_unet_nn.cpp  stable-diffusion-cli.cpp  stable-diffusion-cli_v2.cpp  test_vae.cpp
cpp/sd/: CMakeLists.txt  README.md  backup.py  backup.sh  build_sd.sh  build_sd_dl.sh  code_search.sh  common_block.hpp  design.md  diffusion_model.hpp  ggml_extend.hpp  img.sh  img1.sh  img2.sh  img3.sh  img_hires.sh  pipeline_turbo.py  turbo_pipeline.py  unet.hpp  vae.hpp
cpp/sd/examples/: img_hires.cpp  sdxl_txt2img.cpp
cpp/sd/patches/: sdcpp-freeu-sag-v2.patch
cpp/sd/scripts/: build.sh  prepare_sdcpp_clip_vae.py
cpp/sd/src/adapters/: ipadapter.cpp  ipadapter.h  sdcpp_adapter.cpp  sdcpp_adapter.h
cpp/sd/src/postproc/: postproc.cpp  postproc.h
cpp_runtime/: build_torch_std_helper.sh  libtorch_std_helper.cpp  libtorch_std_helper.h
docs/: attention_alignment.md  design.md  end_to_end_alignment.md  testing.md
runtime/: dgemm_wrapper.c  staticpy_torch.cpp
scripts/: compare_bin.py  gen_unet_manual.sh  gen_unet_sdpa.sh  preprocess_prompt.py  reference_unet.py  run_attention_compare.sh
sd_runtime/: array_ops.static.py  attention.static.py  clip.static.py  clip_model.static.py  clip_tokenizer.static.py  flux_attention.static.py  main.static.py  model_loader.static.py  nn.static.py  nn_ops.static.py  ops.static.py  sampler.static.py  samplers.static.py  sd1_clip.static.py  sd_clip_vision.static.py  sd_controlnet.static.py  sd_core.static.py  sd_cosmos.static.py  sd_embed.static.py  sd_flux.static.py  sd_flux_controlnet.static.py  sd_gligen.static.py  sd_hunyuan_video.static.py  sd_ip_adapter.static.py  sd_loha_lokr.static.py  sd_long_clip.static.py  sd_lora.static.py  sd_models.static.py  sd_pipeline.py  sd_pipeline.static.py  sd_pixart.static.py  sd_samplers.static.py  sd_samplers_extras.static.py  sd_sd3.static.py  sd_stable_cascade.static.py  sd_t2i_adapter.static.py  sd_t5.static.py  sd_t5_config.static.py  sd_unet.static.py  sd_utils.static.py  (+15 more)
staticpy/: static_build.sh  static_prelude.scm  static_stdlib.scm  static_translate.py
test/: test_attention_compare.static.py  test_sampler_main.static.py  test_twofwd_main.static.py
